--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,19 +11,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <section class="cover">
-        <div id="cover-text">
+        <div>
             <h1>Let's Help Those Who Are <br>More In Need</h1>
-            <p>A flood is an overflow of water or rarely other fluids that submerges land that is usually dry <br> In
-                the sense of flowing water, the word may also be applied to the inflow of the tide.</p>
+            <p>A flood is an overflow of water or rarely other fluids that submerges land that is usually dry <br> In the sense of flowing water, the word may also be applied to the inflow of the tide.</p>
             <button>Donate Now</button>
         </div>
     </section>
     <section class="zero">
         <h1>Donate Today</h1>
-        <p class="gray">We collect donation for flood affected people in Shylet, Bangladesh. <br>Raise your hands for
-            needy people</p>
+        <p class="gray">We collect donation for flood affected people in Shylet, Bangladesh. <br>Raise your hands for needy people</p>
         <section class="one">
             <div class="taka">
                 <h1>100tk</h1>
@@ -53,7 +53,7 @@
             <div id="food">
                 <img src="/icons/ramen_dining_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <h2>Food for a family</h2>
-                <p class="gray">any nutritious substance that people or animals eat or drink or that plants absorb inorder to maintain life and growth.</p>
+                <p class="gray">any nutritious substance that people or animals eat or drink or that plants absorb in order to maintain life and growth.</p>
             </div>
             <div id="shelter">
                 <img src="/icons/home_work_FILL0_wght400_GRAD0_opsz48.svg" alt="">
@@ -93,5 +93,4 @@
     <h1>Be Humble</h1>
     <p>I'm gonna do it</p>
 </footer>
-
 </html>
