--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p class="gray">a place giving temporary protection from bad weather or danger.</p>
             </div>
             <div id="education">
-                <img src="/icons/school_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <img src=".icons/school_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <h2>Education for a family</h2>
                 <p class="gray">the process of receiving or giving systematic instruction, especially at a school or university.</p>
             </div>
@@ -75,7 +75,7 @@
             <button>How to Contribute?</button>
         </div>
         <div class="half-width">
-            <img src="/images/donation0.jpg" alt="">
+            <img src="./images/donation0.jpg" alt="">
         </div>
     </section>
     <section class="updates">
