--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <button>How to Contribute?</button>
         </div>
         <div class="half-width">
-            <img src="./images/donation0.jpg" alt="">
+            <img src="images/donation0.jpg" alt="">
         </div>
     </section>
     <section class="updates">
