--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 
     <section class="plan">
         <h1>Our Donate Plan</h1>
-        <p class="gray">First of all, We sure about food efficiency in floody area. <br>Then give them temporary shelter <br>and educational programme for their childer.
+        <p class="gray">First of all, We sure about food efficiency in floody area. <br>Then give them temporary shelter <br>and educational programme for their childern.
         </p>
         <section class="fse">
             <div id="food">
-                <img src="/icons/ramen_dining_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <img src="icons/ramen_dining_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <h2>Food for a family</h2>
                 <p class="gray">any nutritious substance that people or animals eat or drink or that plants absorb in order to maintain life and growth.</p>
             </div>
             <div id="shelter">
-                <img src="/icons/home_work_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <img src="icons/home_work_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <h2>Shelter for a family</h2>
                 <p class="gray">a place giving temporary protection from bad weather or danger.</p>
             </div>
             <div id="education">
-                <img src=".icons/school_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <img src="icons/school_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <h2>Education for a family</h2>
                 <p class="gray">the process of receiving or giving systematic instruction, especially at a school or university.</p>
             </div>
