--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <section class="cover">
         <div>
@@ -47,7 +45,7 @@
 
     <section class="plan">
         <h1>Our Donate Plan</h1>
-        <p class="gray">First of all, We sure about food efficiency in floody area. <br>Then give them temporary shelter <br>and educational programme for their childern.
+        <p class="gray">First of all, We sure about food efficiency in flood affected area. <br>Then give them temporary shelter <br>and educational programme for their children.
         </p>
         <section class="fse">
             <div id="food">
@@ -67,7 +65,6 @@
             </div>
         </section>
     </section>
-
     <section class="extra">
         <div class="half-width">
             <h1>No More Homeless, <br>No More Hunger</h1>
@@ -82,15 +79,21 @@
         <h1>Get My Updates</h1>
         <p class="gray">If you wanna get updates about our project, please sign up our newsletter.</p>
         <div class="email">
-            <form>
-                <input type="email" placeholder="Email">
-                <input type="submit" value="Subscribe">
-            </form>
+            <div id="mail">
+                <p>Email</p>
+            </div>
+            <div id="sub">
+                <p>Subscribe</p>
+            </div>
         </div>
     </section>
 </body>
 <footer>
-    <h1>Be Humble</h1>
-    <p>I'm gonna do it</p>
+    <div id="be">
+        <h1>Be Humble</h1>
+    </div>
+    <div id="do">
+        <p>I'm gonna do it</p>
+    </div>
 </footer>
 </html>
